# cmake_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  macos.cmake  readme.md
.github/workflows/: cmake-multi-platform.yml  cmake_multi_platform.yml
android-project/app/: build.gradle
android-project/app/src/androidTest/java/com/egleba/app/: AppActivityTest.java
android-project/gradle/: libs.versions.toml
cmake/: cpm-config.cmake
cmake/code_quality/: clang_doc-config.cmake  clang_format-config.cmake  ct_doxygen-config.cmake  doxygen-config.cmake
cmake/cpm/: doctest-config.cmake  flecs-config.cmake  freetype-config.cmake  imgui-config.cmake  implot-config.cmake  lua_lang-config.cmake  pybind-config.cmake  sdl3-config.cmake  steam_audio-config.cmake  tinygltf-config.cmake
cmake/description/: package_description-config.cmake
cmake/toolchains/: llvm_mingw.cmake  macos.cmake
docs/: architecture.md  platforms.md  presets.md  references.md
scripts/: waydroid.sh
src/: CMakeLists.txt  main.cpp  sdl_main.cpp  tracy_sandbox.cpp
tests/: CMakeLists.txt  doctest_example.cpp  junit4_jni.cpp  main.cpp
